Created BaseFragment with viewBinding

--- a/presentation/src/main/res/layout/fragment_tape.xml
+++ b/presentation/src/main/res/layout/fragment_tape.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ABC34499"
     tools:context=".fragments.tape.TapeFragment">
 
     <!-- TODO: Update blank fragment layout -->
