--- a/presentation/src/main/res/layout/fragment_profile.xml
+++ b/presentation/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#AB4488C3"
     tools:context=".fragments.profile.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
